--- a/src/main/resources/templates/portfolio/layout.html
+++ b/src/main/resources/templates/portfolio/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-js" lang="en" dir="ltr">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <meta charset="utf-8" />
